--- a/stepExample.html
+++ b/stepExample.html
@@ -28,7 +28,7 @@
 		}
 	</style>
 	<div id="Content">
-		<div id="Title">Tone.Transport</div>
+		<div id="Title">Game OF Life Musicified</div>
 		<div id="Explanation">
 			<a href="http://tonejs.org/docs/#Transport">Tone.Transport</a> 
 			is the application-wide timekeeper. It uses an OscillatorNode
@@ -36,7 +36,11 @@
 			tempo-curves and automation. This example uses Tone.Transport.setInterval
 			to invoke a callback every 16th note.
 		</div>
+
+
 		<canvas nx="matrix"></canvas>
+
+
 	</div>	
 	<script type="text/javascript">
 		//setup a polyphonic sampler
@@ -50,21 +54,27 @@
 		}).toMaster();
 		// var keys = new Tone.PolySynth(4, Tone.SimpleSynth).toMaster();
 		//the notes
-		var noteNames = ["F#", "E", "C#", "A"];
+		var noteNames = ["F#", "E", "C#", "A", "F#", "E", "C#", "A"];
 		// var noteNames = ["F#3", "E3", "C#3", "A3"];
+
+
+
 		var loop = new Tone.Sequence(function(time, col){
+			console.log(col);
 			var column = matrix1.matrix[col];
-			for (var i = 0; i < 4; i++){
+			for (var i = 0; i < 8; i++){
 				if (column[i] === 1){
 					keys.triggerAttackRelease(noteNames[i], "32n", time);
 				}
 			}
+			if(col===15) matrix1.life();	
 		}, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], "16n");
+
 
 
 		/*
 		 KICK
-		 */
+		//  */
 		var kick = new Tone.DrumSynth({
 			"envelope" : {
 				"sustain" : 0,
@@ -76,12 +86,12 @@
 
 		var kickPart = new Tone.Loop(function(time){
 			kick.triggerAttackRelease("C2", "8n", time);
-		}, "2n").start(0);
+		}, "2n").start("2m");
 		
 
-		/*
-		 SNARE
-		 */
+		// /*
+		//  SNARE
+		//  */
 		var snare = new Tone.NoiseSynth({
 			"volume" : -5,
 			"envelope" : {
@@ -118,7 +128,7 @@
 
 		// var pianoPart = new Tone.Part(function(time, chord){
 		// 	piano.triggerAttackRelease(chord, "8n", time);
-		// }, [["0:0:2", cChord], ["0:1", cChord], ["0:1:3", dChord], ["0:2:2", cChord], ["0:3", cChord], ["0:3:2", gChord]]).start("2m");
+		// }, [["0:0:2", cChord], ["0:1", cChord], ["0:1:3", dChord], ["0:2:2", cChord], ["0:3", cChord], ["0:3:2", gChord]]).start("1m");
 
 		// pianoPart.loop = true;
 		// pianoPart.loopEnd = "1m";
@@ -127,7 +137,7 @@
 
 		/*
 		 BASS
-		 */
+		//  */
 		var bass = new Tone.MonoSynth({
 			"volume" : -10,
 			"envelope" : {
@@ -146,7 +156,7 @@
 
 		var bassPart = new Tone.Sequence(function(time, note){
 			bass.triggerAttackRelease(note, "16n", time);
-		}, ["C2", ["C3", ["C3", "D2"]], "E2", ["D2", "A1"]]).start(0);
+		}, ["C2", ["C3", ["C3", "D2"]], "E2", ["D2", "A1"]]).start("1m");
 
 		bassPart.probability = 0.9;
 
@@ -159,9 +169,11 @@
 			nx.colorize("#f5871f");
 			
 			matrix1.col = 16;
+			matrix1.row = 8;
 			matrix1.init();
 			matrix1.resize($("#Content").width(), 250);
 			matrix1.draw();
+
 		}
 		$(function(){
 			new Interface.Slider({
