--- a/stepExample.html
+++ b/stepExample.html
@@ -49,6 +49,10 @@
 			"C#" : "./audio/casio/Cs2.mp3",
 			"E" : "./audio/casio/E2.mp3",
 			"F#" : "./audio/casio/Fs2.mp3",
+			"A" : "./audio/casio/A1.mp3",
+			"C#" : "./audio/casio/Cs2.mp3",
+			"E" : "./audio/casio/E2.mp3",
+			"F#" : "./audio/casio/Fs2.mp3",
 		}, {
 			"volume" : 2,
 		}).toMaster();
