--- a/browser/index.html
+++ b/browser/index.html
@@ -41,8 +41,8 @@
         <div id='upload'>
           <p>Upload a Pattern</p>
           <form>
-            <input type="file" name="pic" accept="image/*">
-            <input type="submit">
+            <input type="file" />
+            <input type="submit" />
           </form>
         </div>
       </section>
