--- a/stepExample.html
+++ b/stepExample.html
@@ -36,42 +36,35 @@
 
 	</div>	
 	<script type="text/javascript">
+		
+	
+
 		//setup a polyphonic sampler
 		var keys = new Tone.PolySynth(4, Tone.Sampler, {
-			"A" : "./audio/casio/A1.mp3",
 			"C#" : "./audio/casio/Cs2.mp3",
-			"E" : "./audio/casio/E2.mp3",
+			"D#" : "./audio/casio/Ds2.mp3",
 			"F#" : "./audio/casio/Fs2.mp3",
-			"A" : "./audio/casio/A1.mp3",
-			"C#" : "./audio/casio/Cs2.mp3",
-			"E" : "./audio/casio/E2.mp3",
-			"F#" : "./audio/casio/Fs2.mp3",
+			"G#" : "./audio/casio/Gs1.mp3",
+			"A#" : "./audio/casio/As1.mp3"
 		}, {
-			"volume" : 2,
+			"volume" : 5
 		}).toMaster();
-		// var keys = new Tone.PolySynth(4, Tone.SimpleSynth).toMaster();
-		//the notes
-		var noteNames = ["F#", "E", "C#", "A", "F#", "E", "C#", "A"];
-		// var noteNames = ["F#3", "E3", "C#3", "A3"];
 
-
+		var noteMap = ["C#", "D#", "F#", "G#", "A#"]
 
 		var loop = new Tone.Sequence(function(time, col){
-			console.log(col);
+
 			var column = matrix1.matrix[col];
 			for (var i = 0; i < 8; i++){
-				if (column[i] === 1){
-					keys.triggerAttackRelease(noteNames[i], "32n", time);
+				if (column[i]){
+					keys.triggerAttackRelease(noteMap[i], "32n", time);
 				}
 			}
-			if(col===15) matrix1.life();	
+			if(col===15) matrix1.life();
+
 		}, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], "16n");
 
 
-
-		/*
-		 KICK
-		//  */
 		var kick = new Tone.DrumSynth({
 			"envelope" : {
 				"sustain" : 0,
@@ -85,10 +78,6 @@
 			kick.triggerAttackRelease("C2", "8n", time);
 		}, "2n").start("2m");
 		
-
-		// /*
-		//  SNARE
-		//  */
 		var snare = new Tone.NoiseSynth({
 			"volume" : -5,
 			"envelope" : {
@@ -107,34 +96,6 @@
 			snare.triggerAttack(time);
 		}, "2n").start("4n");
 
-
-		/**
-		 *  PIANO
-		//  */
-		// var piano = new Tone.PolySynth(4, Tone.SimpleSynth, {
-		// 	"volume" : -8,
-		// 	"oscillator" : {
-		// 		"partials" : [1, 2, 1],
-		// 	},
-		// 	"portamento" : 0.05
-		// }).toMaster()
-
-		// var cChord = ["C4", "E4", "G4", "B4"];
-		// var dChord = ["D4", "F4", "A4", "C5"];
-		// var gChord = ["B3", "D4", "E4", "A4"];
-
-		// var pianoPart = new Tone.Part(function(time, chord){
-		// 	piano.triggerAttackRelease(chord, "8n", time);
-		// }, [["0:0:2", cChord], ["0:1", cChord], ["0:1:3", dChord], ["0:2:2", cChord], ["0:3", cChord], ["0:3:2", gChord]]).start("1m");
-
-		// pianoPart.loop = true;
-		// pianoPart.loopEnd = "1m";
-		// pianoPart.humanize = true;
-
-
-		/*
-		 BASS
-		//  */
 		var bass = new Tone.MonoSynth({
 			"volume" : -10,
 			"envelope" : {
@@ -157,7 +118,6 @@
 
 		bassPart.probability = 0.9;
 
-		//set the transport 
 		Tone.Transport.bpm.value = 90;
 	
 	</script>
