--- a/stepExample.html
+++ b/stepExample.html
@@ -47,7 +47,7 @@
 			"E" : "./audio/casio/E2.mp3",
 			"F#" : "./audio/casio/Fs2.mp3",
 		}, {
-			"volume" : 2,
+			"volume" : 5
 		}).toMaster();
 		// var keys = new Tone.PolySynth(4, Tone.SimpleSynth).toMaster();
 		//the notes
@@ -111,25 +111,25 @@
 		/**
 		 *  PIANO
 		//  */
-		// var piano = new Tone.PolySynth(4, Tone.SimpleSynth, {
-		// 	"volume" : -8,
-		// 	"oscillator" : {
-		// 		"partials" : [1, 2, 1],
-		// 	},
-		// 	"portamento" : 0.05
-		// }).toMaster()
+		var piano = new Tone.PolySynth(4, Tone.SimpleSynth, {
+			"volume" : -8,
+			"oscillator" : {
+				"partials" : [1, 2, 1],
+			},
+			"portamento" : 0.05
+		}).toMaster()
 
-		// var cChord = ["C4", "E4", "G4", "B4"];
-		// var dChord = ["D4", "F4", "A4", "C5"];
-		// var gChord = ["B3", "D4", "E4", "A4"];
+		var cChord = ["C4", "E4", "G4", "B4"];
+		var dChord = ["D4", "F4", "A4", "C5"];
+		var gChord = ["B3", "D4", "E4", "A4"];
 
-		// var pianoPart = new Tone.Part(function(time, chord){
-		// 	piano.triggerAttackRelease(chord, "8n", time);
-		// }, [["0:0:2", cChord], ["0:1", cChord], ["0:1:3", dChord], ["0:2:2", cChord], ["0:3", cChord], ["0:3:2", gChord]]).start("1m");
+		var pianoPart = new Tone.Part(function(time, chord){
+			piano.triggerAttackRelease(chord, "8n", time);
+		}, [["0:0:2", cChord], ["0:1", cChord], ["0:1:3", dChord], ["0:2:2", cChord], ["0:3", cChord], ["0:3:2", gChord]]).start("1m");
 
-		// pianoPart.loop = true;
-		// pianoPart.loopEnd = "1m";
-		// pianoPart.humanize = true;
+		pianoPart.loop = true;
+		pianoPart.loopEnd = "1m";
+		pianoPart.humanize = true;
 
 
 		/*
