--- a/stepExample.html
+++ b/stepExample.html
@@ -47,7 +47,7 @@
 			"E" : "./audio/casio/E2.mp3",
 			"F#" : "./audio/casio/Fs2.mp3",
 		}, {
-			"volume" : 2,
+			"volume" : 6,
 		}).toMaster();
 		// var keys = new Tone.PolySynth(4, Tone.SimpleSynth).toMaster();
 		//the notes
@@ -87,24 +87,26 @@
 			}
 		}).toMaster();
 
+		var bassPart = new Tone.Sequence(function(time, note){
+			bass.triggerAttackRelease(note, "16n", time);
+		}, ["C2", ["C3", ["C3", "D2"]], "E2", ["D2", "A1"]]).start();
 
 		var notes = ["A","B","C","D","E","F","G"];
-		var bassNotes = ["C2", ["C3", ["C3", "D2"]], "E2", ["D2", "A1"]];
 
 		bassFunc = function() {
-			var now = Tone.context.currentTime;
-			var bassPart = new Tone.Sequence(function(time, note){
-				bass.triggerAttackRelease(note, "16n", time);
-			}, bassNotes).start().stop(now+"1m");
+			// bassPart.at(0, "D5");
+			var octiveShift = Math.floor(Math.random() * 3) - 1;
+			var baseNote = 2 + Math.floor(Math.random() * 2);
+			bassPart.at(0, notes[baseNote] + (2+octiveShift));
+			bassPart.at(1).at(0, notes[baseNote] + (3+octiveShift));
 
+			// bassPart.at(1).at(1).at(0, notes[baseNote] + (3+octiveShift));
+			// bassPart.at(1).at(1).at(1, notes[baseNote+1] + (2+octiveShift));
+
+			bassPart.at(2, notes[baseNote+2] + (2+octiveShift));
+			bassPart.at(3).at(0, notes[baseNote+1] + (2+octiveShift));
+			bassPart.at(3).at(1, notes[baseNote-2] + (1+octiveShift));
 		}
-
-
-
-		// A-G
-		
-		// option # or 
-
 
 		/*
 		 KICK
@@ -143,31 +145,6 @@
 		var snarePart = new Tone.Loop(function(time){
 			snare.triggerAttack(time);
 		}, "2n").start("4n");
-
-
-		/**
-		 *  PIANO
-		//  */
-		// var piano = new Tone.PolySynth(4, Tone.SimpleSynth, {
-		// 	"volume" : -8,
-		// 	"oscillator" : {
-		// 		"partials" : [1, 2, 1],
-		// 	},
-		// 	"portamento" : 0.05
-		// }).toMaster()
-
-		// var cChord = ["C4", "E4", "G4", "B4"];
-		// var dChord = ["D4", "F4", "A4", "C5"];
-		// var gChord = ["B3", "D4", "E4", "A4"];
-
-		// var pianoPart = new Tone.Part(function(time, chord){
-		// 	piano.triggerAttackRelease(chord, "8n", time);
-		// }, [["0:0:2", cChord], ["0:1", cChord], ["0:1:3", dChord], ["0:2:2", cChord], ["0:3", cChord], ["0:3:2", gChord]]).start("1m");
-
-		// pianoPart.loop = true;
-		// pianoPart.loopEnd = "1m";
-		// pianoPart.humanize = true;
-
 
 
 		//set the transport 
@@ -217,5 +194,3 @@
 	</script>
 </body>
 </html>
-Status API Training Shop Blog About Pricing
-© 2016 GitHub, Inc. Terms Privacy Security Contact Help
