--- a/stepExample.html
+++ b/stepExample.html
@@ -22,7 +22,7 @@
 	</script>
 
 </head>
-<body>	
+<body class='blink'>
 	<style type="text/css">
 		canvas {
 			margin-top: 3px;
@@ -36,7 +36,7 @@
 
 		<div id="Content">
 			<canvas nx="matrix"></canvas>
-		</div>	
+		</div>
 
 
      </section>
@@ -44,6 +44,24 @@
 
 
 	<script type="text/javascript">
+
+  const body = $('body');
+
+  function startBlink() {
+    body.addClass('blink');
+  }
+
+  function stopBlink() {
+    body.removeClass('blink');
+  }
+
+  function blinkForTime(time) {
+    startBlink();
+    setTimeout(stopBlink, time);
+  }
+
+
+  var numCellsAlive = 0;
 		//setup a polyphonic sampler
 		var keys = new Tone.PolySynth(4, Tone.Sampler, {
 			"A" : "./audio/casio/A1.mp3",
@@ -69,10 +87,13 @@
 			var column = matrix1.matrix[col];
 			for (var i = 0; i < 8; i++){
 				if (column[i] === 1){
+          numCellsAlive++;
 					keys.triggerAttackRelease(noteNames[i], "32n", time);
 				}
 			}
-			if(col===15) {matrix1.life(); bassFunc(); }	
+			if(col===15) {
+        matrix1.life(); bassFunc();
+      }
 
 		}, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], "16n");
 
@@ -131,7 +152,7 @@
 		var kickPart = new Tone.Loop(function(time){
 			kick.triggerAttackRelease("C2", "8n", time);
 		}, "2n").start("2m");
-		
+
 
 		// // /*
 		// //  SNARE
@@ -155,14 +176,14 @@
 		}, "2n").start("4n");
 
 
-		//set the transport 
+		//set the transport
 		Tone.Transport.bpm.value = 90;
-	
+
 	</script>
 	<script type="text/javascript">
 		nx.onload = function(){
 			nx.colorize("#f5871f");
-			
+
 			matrix1.col = 16;
 			matrix1.row = 8;
 			matrix1.init();
@@ -196,7 +217,7 @@
 			Interface.Loader();
 			$(window).on("resize", function(){
 				matrix1.resize($("#Content").width(), 250);
-				matrix1.draw();	
+				matrix1.draw();
 			});
 		});
 	</script>
