Working on Bass Drop

--- a/stepExample.html
+++ b/stepExample.html
@@ -44,6 +44,7 @@
 
 
 	<script type="text/javascript">
+	var numActiveCells = 0;
 		//setup a polyphonic sampler
 		var keys = new Tone.PolySynth(4, Tone.Sampler, {
 			"A" : "./audio/casio/A1.mp3",
@@ -63,16 +64,25 @@
 		// var noteNames = ["F#3", "E3", "C#3", "A3"];
 
 
-
 		var loop = new Tone.Sequence(function(time, col){
 			console.log(col);
 			var column = matrix1.matrix[col];
 			for (var i = 0; i < 8; i++){
 				if (column[i] === 1){
 					keys.triggerAttackRelease(noteNames[i], "32n", time);
+					numActiveCells++;
 				}
 			}
-			if(col===15) {matrix1.life(); bassFunc(); }	
+			if(col===15) {
+				matrix1.life();
+				bassFunc();
+				if (numActiveCells > 25) {
+					bassDropFunc(); 
+				} else {
+				Tone.Transport.bpm.value = 100+(50*(numActiveCells/64))
+				}
+				numActiveCells= 0;
+			}	
 
 		}, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], "16n");
 
@@ -114,6 +124,14 @@
 			bassPart.at(2, notes[baseNote+2] + (2+octiveShift));
 			bassPart.at(3).at(0, notes[baseNote+1] + (2+octiveShift));
 			bassPart.at(3).at(1, notes[baseNote-2] + (1+octiveShift));
+		}
+
+		bassDropFunc = function() {
+			Tone.Transport.bpm.value = 125;
+			bassPart.at(0, ["C2", "C3", "C2", "C2"]);
+			bassPart.at(1, ["D2", "E2", "D2", "D2"]);
+			bassPart.at(2, ["C2", "C1", "C1", "C1"]);
+			bassPart.at(3, ["B1", "A1", "B1", "B1"]);
 		}
 
 		/*
@@ -158,6 +176,142 @@
 		//set the transport 
 		Tone.Transport.bpm.value = 90;
 	
+
+	//DRUMS//
+
+	//and a compressor
+	
+	var drumCompress = new Tone.Compressor({
+		"threshold" : -30,
+		"ratio" : 6,
+		"attack" : 0.3,
+		"release" : 0.1
+	}).toMaster();
+
+	var distortion = new Tone.Distortion({
+		"distortion" : 0.4,
+		"wet" : 0.4
+	});
+
+	//hats
+	var hats = new Tone.Sampler("./audio/505/hh.mp3", {
+		"volume" : 2,
+		"envelope" : {
+			"attack" : 0.001,
+			"decay" : 0.02,
+			"sustain" : 0.01,
+			"release" : 0.01
+		},
+		"filterEnvelope" : {
+			"attack" : 0.001,
+			"decay" : 0.02,
+			"sustain" : 1,
+			"baseFrequency" : 6000,
+			"octaves" : -3.3
+		},
+		"filter" : {
+			"type" : "highpass"
+		}
+	}).chain(distortion, drumCompress);
+
+	var hatsLoop = new Tone.Loop({
+		"callback" : function(time){
+			hats.triggerAttackRelease(0, "8n", time);
+		},
+		"interval" : "16n",
+		"probability" : 0.8
+	}).start("1m");
+
+	//SNARE PART
+	var snare2 = new Tone.Sampler("./audio/505/snare.mp3", {
+		"volume" : 2,
+		"envelope" : {
+			"attack" : 0.01,
+			"decay" : 0.05,
+			"sustain" : 0
+		},
+		"filterEnvelope" : {
+			"attack" : 0.001,
+			"decay" : 0.01,
+			"sustain" : 0,
+			"baseFrequency" : 3000,
+			"octaves" : 2
+		},
+	}).chain(distortion, drumCompress);
+
+	var snarePart2 = new Tone.Sequence(function(time, velocity){
+		snare2.triggerAttackRelease(0, "8n", time, velocity);
+	}, [null, 1, null, [1, 0.3]]).start(0);
+
+	var kick2 = new Tone.DrumSynth({
+		"volume" : 2,
+		"pitchDecay" : 0.01,
+		"octaves" : 6,
+		"oscillator" : {
+			"type" : "square4"
+		},
+		"envelope" : {
+			"attack" : 0.001,
+			"decay" : 0.2,
+			"sustain" : 0
+		}
+	}).connect(drumCompress);
+
+	var kickPart2 = new Tone.Sequence(function(time, probability){
+		if (Math.random() < probability){
+			kick2.triggerAttack("C1", time);
+		}
+	}, [1, [1, [null, 0.3]], 1, [1, [null, 0.5]], 1, 1, 1, [1, [null, 0.8]]], "2n").start(0);
+	
+	// BASS
+	var bass2 = new Tone.SimpleFM({
+		"volume" : 5,
+		"harmonicity" : 1,
+		"modulationIndex" : 3.5,
+		"carrier" : {
+			"oscillator" : {
+				"type" : "custom",
+				"partials" : [0, 1, 0, 2]
+			},
+			"envelope" : {
+				"attack" : 0.08,
+				"decay" : 0.3,
+				"sustain" : 0,
+			},
+		},
+		"modulator" : {
+			"oscillator" : {
+				"type" : "square"
+			},
+			"envelope" : {
+				"attack" : 0.1,
+				"decay" : 0.2,
+				"sustain" : 0.3,
+				"release" : 0.01
+			},
+		}
+	}).toMaster();
+
+
+	var bassPart2 = new Tone.Part(function(time, event){
+		if (Math.random() < event.prob){
+			bass2.triggerAttackRelease(event.note, event.dur, time);
+		}
+	}, [{time : "0:0", note : "C2", dur : "4n + 8n", prob: 1}, {time : "0:2", note : "C2", dur : "8n", prob : 0.6}, 
+		{time : "0:2 + 4t", note : "C2", dur : "8n", prob : 0.4}, {time : "0:2 + 4t*2", note : "C2", dur : "8n", prob : 0.9},
+		{time : "1:0", note : "C2", dur : "4n + 8n", prob : 1}, {time : "1:2", note : "C2", dur : "8n", prob : 0.6}, 
+		{time : "1:2 + 4t", note : "C2", dur : "8n", prob : 0.4}, {time : "1:2 + 4t*2", note : "E2", dur : "8n", prob : 0.9},
+		{time : "2:0", note : "F2", dur : "4n + 8n", prob : 1}, {time : "2:2", note : "F2", dur : "8n", prob : 0.6}, 
+		{time : "2:2 + 4t", note : "F2", dur : "8n", prob : 0.4}, {time : "2:2 + 4t*2", note : "F2", dur : "8n", prob : 0.9},
+		{time : "3:0", note : "F2", dur : "4n + 8n", prob : 1}, {time : "3:2", note : "F2", dur : "8n", prob : 0.6}, 
+		{time : "3:2 + 4t", note : "F2", dur : "8n", prob : 0.4}, {time : "3:2 + 4t*2", note : "B1", dur : "8n", prob : 0.9}]).start(0);
+
+	bassPart2.loop = true;
+	bassPart2.loopEnd = "4m";
+
+	Tone.Transport.bpm.value = 125;
+
+
 	</script>
 	<script type="text/javascript">
 		nx.onload = function(){
