--- a/stepExample.html
+++ b/stepExample.html
@@ -22,7 +22,7 @@
 	</script>
 
 </head>
-<body class='blink'>
+<body>
 	<style type="text/css">
 		canvas {
 			margin-top: 3px;
@@ -59,8 +59,6 @@
     startBlink();
     setTimeout(stopBlink, time);
   }
-
-  startBlink();
 
 
 
@@ -152,8 +150,8 @@
 			bassPart.at(1, ["D2", "E2", "D2", "D2"]);
 			bassPart.at(2, ["C2", "C1", "C1", "C1"]);
 			bassPart.at(3, ["B1", "A1", "B1", "B1"]);
+			blinkForTime(5000);
 		}
-		startBlink();
 
 		/*
 		 KICK
