Added option to Game of Life

--- a/browser/index.html
+++ b/browser/index.html
@@ -23,7 +23,9 @@
  <h1 id='title'>Musical Game of Life</h1>
 
   <main>
-    <!-- <button -->
+    <form>
+      <input type="checkbox" id="lifeCheck" name="life" value="lifify"> Give Life </input>
+    </form>
     <section class='wrapper'>
 
     <div id="Content">
