--- a/browser/index.html
+++ b/browser/index.html
@@ -29,14 +29,17 @@
     <section class='wrapper'>
 
       <div id="noteController">
+
         <form>
-          <input type="checkbox" id="lifeCheck" name="life" value="lifify" checked> Give Life </input> <br>
+          <br>
+          <input type="checkbox" id="lifeCheck" name="life" value="lifify" checked> Give Life </input> <br><br>
           <input type="checkbox" id="bpmIncrease" name="bpmIncrease" value="bpmIncrease" checked> Increase BPM </input>
       </form>
+
       </div>
 
       <div id="Content">
-        <canvas nx="matrix" label="Treble"></canvas>
+        <canvas nx="matrix"></canvas>
       </div>
 
 
