--- a/browser/index.html
+++ b/browser/index.html
@@ -29,9 +29,9 @@
 
         <form>
           <br>
-          <input type="checkbox" id="lifeCheck" name="life" value="lifify" checked> Give Life </input> <br><br>
+          <input type="checkbox" id="lifeCheck" name="life" value="lifify"> Give Life </input> <br><br>
           <input type="checkbox" id="bpmIncrease" name="bpmIncrease" value="bpmIncrease" checked> Increase BPM </input><br><br>
-          <input type="checkbox" id="bassDrop" name="bassDrop" value="bassDrop" checked> Bass Drops </input>
+          <input type="checkbox" id="bassDrop" name="bassDrop" value="bassDrop" > Bass Drops </input>
       </form>
 
       </div>
