updated bootstrap cols

--- a/browser/index.html
+++ b/browser/index.html
@@ -29,9 +29,9 @@
  <h1 id='title'>Kanye's Game of Life</h1>
 
   <main>
-    <section class='wrapper'>
+    <section class="col-xs-12" class='wrapper'>
 
-      <div id="noteController">
+      <div class="col-xs-2" id="noteController">
 
         <form>
           <br>
@@ -42,7 +42,7 @@
 
       </div>
 
-      <div id="Content">
+      <div class="col-xs-10 col-sm-offset-2" id="Content">
         <canvas nx="matrix"></canvas>
       </div>
 
