made header directive

--- a/browser/index.html
+++ b/browser/index.html
@@ -22,11 +22,13 @@
   <script type="text/javascript" src="/scripts/Interface.js"></script>
   <script type="text/javascript" src="/scripts/nexusUI.js"></script>
   <script src="/js/module.js" defer></script>
+  <script src="/js/header/header.directive.js" defer></script>
 
 </head>
 <body ng-app="myBeat">
 
- <h1 id='title'>Kanye's Game of Life</h1>
+ 
+ <header></header>
 
   <main>
     <section class="col-xs-12" class='wrapper'>
