made Controller directive

--- a/browser/index.html
+++ b/browser/index.html
@@ -23,6 +23,7 @@
   <script type="text/javascript" src="/scripts/nexusUI.js"></script>
   <script src="/js/module.js" defer></script>
   <script src="/js/header/header.directive.js" defer></script>
+  <script src="/js/noteSelect/noteSelect.directive.js" defer></script>
 
 </head>
 <body ng-app="myBeat">
@@ -32,17 +33,7 @@
 
   <main>
     <section class="col-xs-12" class='wrapper'>
-
-      <div class="col-xs-2" id="noteController">
-
-        <form>
-          <br>
-          <input type="checkbox" id="lifeCheck" name="life" value="lifify"> Give Life </input> <br><br>
-          <input type="checkbox" id="bpmIncrease" name="bpmIncrease" value="bpmIncrease" checked> Increase BPM </input><br><br>
-          <input type="checkbox" id="bassDrop" name="bassDrop" value="bassDrop" > Bass Drops </input>
-      </form>
-
-      </div>
+      <note-select></note-select>
 
       <div class="col-xs-10 col-sm-offset-2" id="Content">
         <canvas nx="matrix"></canvas>
