Sequencer state added

--- a/browser/index.html
+++ b/browser/index.html
@@ -31,17 +31,7 @@
  
  <header></header>
 
-  <main>
-    <section class="col-xs-12" class='wrapper'>
-      <note-select></note-select>
-
-      <div class="col-xs-10 col-sm-offset-2" id="Content">
-        <canvas nx="matrix"></canvas>
-      </div>
-
-
-     </section>
-  </main>
+ <ui-view></ui-view>
 
   <script type="text/javascript" src="/js/music.js"></script>
   <script type="text/javascript" src="/js/nexusSetup.js"</script>
