Working on startup

--- a/browser/index.html
+++ b/browser/index.html
@@ -24,9 +24,10 @@
   <script src="/js/module.js" defer></script>
   <script src="/js/header/header.directive.js" defer></script>
   <script src="/js/noteSelect/noteSelect.directive.js" defer></script>
+  <script src="/js/sequencer/sequencer.states.js" defer></script>
 
 </head>
-<body ng-app="myBeat">
+  <body ng-app="myBeat">
 
  
  <header></header>
