making custom drumKit

--- a/browser/index.html
+++ b/browser/index.html
@@ -24,9 +24,9 @@
   <script src="/js/module.js" defer></script>
 
 </head>
-<body ng-app="myBeat">
+<!-- <body ng-app="myBeat"> -->
 
- <h1 id='title'>Kanye's Game of Life</h1>
+ <h1 id='title'>My Beat</h1>
 
   <main>
     <section class='wrapper'>
